[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cschesch-helpers"
version = "0.0.1"
authors = [
  { name="Constantin Schesch", email="c.schesch@gmail.com" },
]
description = "Just some small helpers for data analysis in Pyhton."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cschesch/cschesch-helpers"
"Bug Tracker" = "https://github.com/cschesch/cschesch-helpers/issues"